--- a/themes/experience-engine/assets/styles/components/player/live-player.css
+++ b/themes/experience-engine/assets/styles/components/player/live-player.css
@@ -29,8 +29,8 @@ iframe[src^="https://omny.fm"] {
 }
 
 .live-player-modal {
-	background: var(--global-theme-secondary);
-	bottom: 102px; /*Height of the live player bar + 18px*/
+	background: #efefef;
+	bottom: 75px;
 	box-shadow: inset 0px -2px 2px rgba(0, 0, 0, 0.2),
 				inset 0px 2px 0px rgba(255, 255, 255, 0.25);
 	padding: 2rem;
@@ -38,20 +38,6 @@ iframe[src^="https://omny.fm"] {
 	right: 0;
 	width: 299px;
 	z-index: 100;
-
-	&::after {
-		border: solid transparent;
-		border-top-color: var(--global-theme-secondary);
-		border-width: 8px;
-		content: " ";
-		height: 0;
-		margin-left: -8px;
-		pointer-events: none;
-		position: absolute;
-		right: 2rem;
-		top: 100%;
-		width: 0;
-	}
 
 	& > *:not(:last-child) {
 		margin-bottom: .875rem;
