Updates to position for progress

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -74,12 +74,13 @@
 	& .controls-progress {
 		left: 0;
 		position: absolute;
-		top: 0;
+		top: -10px;
 		width: 100%;
 
 		& input[type="range"] {
 			width: 100%;
 		}
+		
 	}
 
 	& .controls-info {
