--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -307,7 +307,7 @@
 			outline: 0;
 		}
 
-		& .controls-volume-slider {
+		& .ee-range-input-slider {
 			left: 3rem;
 			opacity: 0;
 			position: absolute;
