Updated progress thumb

--- a/themes/experience-engine/assets/styles/components/player/range-slider.css
+++ b/themes/experience-engine/assets/styles/components/player/range-slider.css
@@ -81,4 +81,14 @@
     }
 
   }
+
+  &.-progress {
+    & input[type=range] {
+      &::-webkit-slider-thumb {
+        border-radius: 0;
+        height: 7px;
+        width: 5px;
+      }
+    }
+  }
 }
