Tweaked thumb tracker placement

--- a/themes/experience-engine/assets/styles/components/player/range-slider.css
+++ b/themes/experience-engine/assets/styles/components/player/range-slider.css
@@ -23,6 +23,7 @@
       border-radius: 50px;
       cursor: pointer;
       height: 11px;
+      margin-top: -4.5px;
       width: 11px;
     }
 
@@ -86,6 +87,7 @@
       &::-webkit-slider-thumb {
         border-radius: 0;
         height: 7px;
+        margin-top: -2.5px;
         width: 5px;
       }
     }
