--- a/themes/experience-engine/assets/styles/components/single/events.css
+++ b/themes/experience-engine/assets/styles/components/single/events.css
@@ -25,6 +25,17 @@
 	& .event-date {
 		font-size: 1.5rem;
 		font-weight: 600;
+
+		& .sep {
+			border-right: 2px solid var(--global-silver);
+			font-size: 1rem;
+			margin: 0 1rem;
+
+			&::before {
+				content: " ";
+				display: inline-block;
+			}
+		}
 	}
 
 	& .tribe-address,
