--- a/themes/experience-engine/assets/styles/global/variables.css
+++ b/themes/experience-engine/assets/styles/global/variables.css
@@ -7,6 +7,7 @@
 	--global-mercury: #e5e5e5;
 	--global-gallery: #f0f0f0;
 	--global-white: #ffffff;
+	--global-alabaster: #FCFCFC;
 
 	--social-twiiter: #55acee;
 	--social-facebook: #3b5999;
