Updated active item selector

--- a/themes/experience-engine/assets/styles/components/navigation/primary-nav.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-nav.css
@@ -107,7 +107,7 @@
 			left: 0;
 			max-height: 25px;
 			position: absolute;
-			top: 0;
+			top: -7px;
 			transform: translateY(50%);
 			width: 3px;
 		}
