--- a/themes/experience-engine/assets/styles/components/modal.css
+++ b/themes/experience-engine/assets/styles/components/modal.css
@@ -44,6 +44,13 @@
 }
 
 .modal {
+	& .btn {
+		&:hover,
+		&:focus {
+			opacity: 0.7;
+		}
+	}
+
 	& .oauth {
 		&.-horizontal {
 			margin-bottom: 2rem;
