Updated text styling

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -344,6 +344,7 @@
 			font-size: 0.875rem;
 			font-weight: 600;
 			transition: color 250ms ease-in-out;
+			text-align: left;
 			text-transform: uppercase;
 
 			&:hover,
