Fixed colour on archive pages for play button

--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -74,6 +74,10 @@
 
 		& .episode-tile {
 			padding-bottom: 0;
+
+			& .status svg path {
+				fill: var(--global-white);
+			}
 		}
 
 		& .swiper-button-prev {
