--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -75,7 +75,7 @@
 		& .episode-tile {
 			padding-bottom: 0;
 
-			& .status svg path {
+			& .status button svg path {
 				fill: var(--global-white);
 			}
 		}
