--- a/themes/experience-engine/assets/styles/global/variables.css
+++ b/themes/experience-engine/assets/styles/global/variables.css
@@ -30,7 +30,7 @@
 
 	/* Set default brand colors */
 	--brand-primary: red;
-	--brand-secondaary: green;
+	--brand-secondary: green;
 	--brand-tertiary: blue;
 }
 
