--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -290,7 +290,9 @@
 }
 
 .show {
-	& .status button svg {
-		fill: var(--brand-primary);
+	& .episode-tile {
+		& .status button svg {
+			fill: var(--brand-primary);
+		}
 	}
 }
