Add IE specific fix to ensure navigation does not bounce when scrolling.

--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -179,3 +179,15 @@
 body.-lock {
 	overflow: hidden;
 }
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+	html{
+		overflow: hidden;
+		height: 100%;
+	}
+
+	body{
+		overflow: auto;
+		height: 100%;
+	}
+}
