Adjust viewport at witch navigation goes to mobile.

--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -21,7 +21,7 @@
 		text-align: center;
 		width: 100%;
 
-		@media (--min-medium-viewport) {
+		@media (--min-large-viewport) {
 			height: calc(100% - 176px);
 			margin-right: -1rem;
 			margin-left: -1rem;
