--- a/themes/experience-engine/assets/styles/base/post-thumbnail.css
+++ b/themes/experience-engine/assets/styles/base/post-thumbnail.css
@@ -25,3 +25,22 @@
 		width: 100%;
 	}
 }
+
+.post-thumbnail.-autoheight {
+	&::before {
+		padding-top: 0;
+		display: none;
+	}
+	
+	& .placeholder-lazyimage {
+		height: auto;
+		position: relative;
+
+		&::before {
+			content: "";
+			display: block;
+			padding-top: calc((3 / 4) * 100%);
+			width: 100%;
+		}
+	}
+}
