Remove border on user nav temporarily, and hides the nav.

--- a/themes/experience-engine/assets/styles/components/navigation/user-nav.css
+++ b/themes/experience-engine/assets/styles/components/navigation/user-nav.css
@@ -1,10 +1,13 @@
 .user-nav {
 	background-color: var(--global-theme-secondary);
-	border-top: 1px solid var(--global-mercury);
+	/* border-top: 1px solid var(--global-mercury); */
 	display: flex;
 	justify-content: space-between;
 	padding: 1.1rem 0;
 	z-index: 10;
+
+	/* Hiding the User nav temporarily, delete below when ready to enable */
+	visibility: hidden;
 
 	& > div {
 		display: flex;
