--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -69,7 +69,7 @@
 		left: 0;
 		max-width: 82.6667vw;
 		overflow: auto;
-		padding: 3.5rem 1.1rem 0;
+		padding: 3.5rem 1.1rem;
 		position: fixed;
 		top: 0;
 		z-index: 8;
