--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -82,7 +82,7 @@
 			max-width: 33.3333vw;
 			overflow: visible;
 			position: static;
-			padding: 0;
+			padding: 0 0 10.5rem 0;
 			top: 0;
 			width: auto;
 		}
