--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -19,7 +19,7 @@
 	&:not(.-carousel) {
 		& .episode-tile {
 			& .status button svg {
-				fill: var(--brand-primary);
+				fill: var(--global-white);
 			}
 		}
 	}
