Updated rect to have fill as brand-primary

--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -293,6 +293,10 @@
 	& .episode-tile {
 		& .status button svg {
 			fill: var(--brand-primary);
+
+			& rect {
+				fill: var(--brand-primary);
+			}
 		}
 	}
 }
