@import “base/media”; new partial

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -7,6 +7,7 @@
 @import "base/container";
 @import "base/post-thumbnail";
 @import "base/wp";
+@import "base/media";
 
 @import "components/section/section-header";
 
