@import “base/tables”; new partial

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -8,6 +8,7 @@
 @import "base/post-thumbnail";
 @import "base/wp";
 @import "base/media";
+@import "base/tables";
 
 @import "components/section/section-header";
 
