style player controls to be responsive

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -7,6 +7,10 @@
 	position: relative;
 	padding-left: 1rem;
 
+	@media(--max-medium-viewport) {
+		padding-left: 0;
+	}
+
 	& button {
 		&:focus,
 		&:hover {
@@ -20,36 +24,62 @@
 
 	& .control-section {
 		align-items: center;
+		box-sizing: border-box;
 		display: flex;
-		justify-content: flex-end;
+		flex-flow: row wrap;
+		justify-content: space-between;
 		position: relative;
-
-		@media(--min-medium-viewport) {
-			width: 100%;
-		}
+		width: 100%;
 
 		&:first-child {
-			padding-left: 1rem;
+			flex: 2 0px;
+			margin-left: 1rem;
+			order: 2;
 			overflow: hidden;
-			@media(--max-medium-viewport) {
-				order: 2;
-				width: 100%;
+
+			@media(--min-medium-viewport) {
+				flex: 1 100%;
+				margin-left: 0;
+				max-width: 250px;
+				order: 1;
+			}
+
+			@media(--min-xlarge-viewport) {
+				max-width: 350px;
 			}
 		}
 
 		&:nth-child(2) {
-			@media(--max-medium-viewport) {
-				padding-left: 1rem;
-				order: 1;
-				width: 100%;
+			flex: 1 100%;
+			margin-left: 1rem;
+			margin-right: 1rem;
+			max-width: 54px;
+			order: 1;
+
+			@media(--min-medium-viewport) {
+				flex: 2 0px;
+				max-width: none;
+				order: 2;
 			}
 		}
 
 		&:last-child {
-			@media(--max-medium-viewport) {
-				max-width: 60px;
-				order: 3;
-				width: 100%;
+			flex: 1 100%;
+			max-width: 70px;
+			order: 3;
+
+			@media(--min-medium-viewport) {
+				flex: 1 18%;
+				justify-content: flex-end;
+				max-width: none;
+			}
+
+			@media(--min-large-viewport) {
+				flex: 1 23%;
+			}
+
+			@media(--min-xlarge-viewport) {
+				flex: 1 28%;
 			}
 		}
 
@@ -131,6 +161,10 @@
 		position: relative;
 		width: 100%;
 
+		@media(--min-medium-viewport) {
+			width: 20%;
+		}
+
 		& svg path {
 			fill: var(--brand-primary);
 		}
@@ -153,7 +187,7 @@
 	& .controls-sponsor {
 		display: none;
 
-		@media(--min-medium-viewport) {
+		@media(--min-xlarge-viewport) {
 			display: block !important; /* Overrding ad */
 		}
 	}
@@ -336,12 +370,16 @@
 	& .controls-station {
 		display: none;
 		height: 100%;
-		max-width: 180px;
+		max-width: 150px;
 		position: relative;
-		width: 100%;
+		width: 50%;
 
 		@media(--min-medium-viewport) {
 			display: block;
+		}
+
+		@media(--min-xlarge-viewport) {
+			max-width: 170px;
 		}
 
 		& button {
