adjust responsiveness of player controls some more

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -44,8 +44,13 @@
 				order: 1;
 			}
 
+			@media(--min-large-viewport) {
+				flex: 1 28%;
+				max-width: none;
+			}
+
 			@media(--min-xlarge-viewport) {
-				max-width: 350px;
+				flex: 1 100%;
 			}
 		}
 
@@ -58,8 +63,12 @@
 
 			@media(--min-medium-viewport) {
 				flex: 2 0px;
-				max-width: none;
+				max-width: 200px;
 				order: 2;
+			}
+
+			@media(--min-xlarge-viewport) {
+				flex: 1 100%;
 			}
 		}
 
@@ -79,7 +88,7 @@
 			}
 
 			@media(--min-xlarge-viewport) {
-				flex: 1 28%;
+				flex: 1 100%;
 			}
 		}
 
@@ -378,8 +387,8 @@
 			display: block;
 		}
 
-		@media(--min-xlarge-viewport) {
-			max-width: 170px;
+		@media(--min-xxlarge-viewport) {
+			max-width: 180px;
 		}
 
 		& button {
