set text-overflow: ellipsis on player song info

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -161,6 +161,14 @@
 			display: flex;
 			margin-bottom: 0;
 			white-space: nowrap;
+
+			&:nth-of-type(2) {
+				display: inline-block;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+				width: 98%;
+			}
 		}
 	}
 
