Update color of volume icon

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -354,13 +354,14 @@
 			& svg path {
 				transition: fill 250ms ease-in-out,
 							stroke 250ms ease-in-out;
+				fill: var(--brand-primary) !important; /* Use important to override color settings */
 			}
 
 			& svg path[fill] {
-				fill: var(--brand-primary);
+				fill: var(--brand-primary) !important; /* Use important to override color settings */
 			}
 			& svg path[stroke] {
-				stroke: var(--brand-primary);
+				stroke: var(--brand-primary) !important; /* Use important to override color settings */;
 			}
 		}
 
