Update text color

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -415,7 +415,7 @@
 
 			&:hover,
 			&:focus {
-				color: var(--global-theme-font-secondary);
+				color: var(--global-theme-font-secondary) !important; /* Use important to override color settings */
 			}
 
 			& svg {
