Add overflow only on hover and check if we get a scrollbar

--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -41,7 +41,13 @@
 		/* Windows Only */
 		@nest .is-windows & {
 			@media (--min-large-viewport) {
+				padding-right: 16px;
 				overflow-y: hidden;
+			}
+
+			&:hover {
+				padding-right: 0;
+				overflow-y: auto;
 			}
 		}
 	}
