Update position of icon

--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -152,6 +152,10 @@
 	text-decoration: none;
 	z-index: 10;
 
+	/* IE11 Fix */
+	height: 57px;
+	top: 14px;
+
 	@media (--min-large-viewport) {
 		display: none;
 	}
