Remove scrollbar in mobile

--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -88,6 +88,14 @@
 		z-index: 8;
 		width: 100%;
 
+		@nest .is-windows & {
+			overflow: hidden;
+
+			&.is-active {
+				overflow: auto;
+			}
+		}
+
 		@media (--min-large-viewport) {
 			box-shadow: none;
 			display: block;
