--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -12,7 +12,7 @@
 		height: 100%;
 		min-width: 190px;
 		min-height: calc(100vh - 74px); /*74px is the height of the live player.*/
-		padding: 1.375rem 1.1rem;
+		padding: 0 1.1rem 1.375rem;
 		position: fixed;
 		top: 0;
 	}
@@ -29,7 +29,7 @@
 			max-width: 188px;
 			overflow-x: hidden;
 			overflow-y: auto;
-			padding: 0 1rem;
+			padding: 1.375rem 1rem 0;
 			position: fixed;
 			width: 100%;
 		}
