--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -22,7 +22,8 @@
 		border-left: 1px solid var(--global-mercury);
 	}
 
-	& .control-section {
+	& .control-section,
+	& .controls-wrapper {
 		align-items: center;
 		box-sizing: border-box;
 		display: flex;
@@ -136,10 +137,14 @@
 		}
 	}
 
+	& .controls-wrapper:first-child {
+		overflow: visible;
+	}
+
 	& .controls-progress {
 		left: 0;
 		position: absolute;
-		top: 0;
+		bottom: 16px;
 		width: 100%;
 		z-index: 9;
 
@@ -509,6 +514,7 @@
 	display: flex;
 	height: 54px;
 	justify-content: center;
+	margin-top: -40px;
 	width: 54px;
 
 	&:focus,
