--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -141,6 +141,14 @@
 		overflow: visible;
 	}
 
+	& .controls-wrapper {
+		transition: margin-top 250ms ease-in-out;
+	}
+
+	& .controls-wrapper.-podcast {
+		margin-top: -35px;
+	}
+
 	& .controls-progress {
 		left: 0;
 		position: absolute;
@@ -514,12 +522,14 @@
 	}
 
 	&.-desktop {
-		display: none;
+		transition: opacity 2s ease-in-out;
+		opacity: 0;
 
 		@media(--min-medium-viewport) {
 			display: flex;
 			flex-flow: row nowrap;
 			justify-content: space-between;
+			opacity: 1;
 		}
 
 		& .-progress {
@@ -595,10 +605,6 @@
 	height: 54px;
 	justify-content: center;
 	width: 54px;
-
-	@media(--min-medium-viewport) {
-		margin-top: -40px;
-	}
 
 	&:focus,
 	&:hover {
