Remove transition and margin in mobile

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -146,7 +146,9 @@
 	}
 
 	& .controls-wrapper.-podcast {
-		margin-top: -35px;
+		@media(--min-medium-viewport) {
+			margin-top: -35px;
+		}
 	}
 
 	& .controls-progress {
@@ -287,8 +289,6 @@
 	}
 
 	& .controls-rewind {
-		margin-left: -50px;
-
 		& button {
 			& svg path {
 				fill: var(--global-theme-font-primary);
