hide rewind button if not needed

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -289,6 +289,12 @@
 	}
 
 	& .controls-rewind {
+		display: none;
+
+		&.-podcast {
+			display: block;
+		}
+
 		& button {
 			& svg path {
 				fill: var(--global-theme-font-primary);
