Add media queries

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -292,7 +292,9 @@
 		display: none;
 
 		&.-podcast {
-			display: block;
+			@media(--min-medium-viewport) {
+				display: block;
+			}
 		}
 
 		& button {
