Fix media query

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -292,8 +292,10 @@
 		display: none;
 
 		&.-podcast {
+			display: block;
+
 			@media(--min-medium-viewport) {
-				display: block;
+				display: none;
 			}
 		}
 
