--- a/themes/experience-engine/assets/styles/components/breaking-news.css
+++ b/themes/experience-engine/assets/styles/components/breaking-news.css
@@ -21,6 +21,7 @@ body.-dark {
 }
 
 .notification-banner {
+	box-shadow: 1px 0 3px rgba(0, 0, 0, 0.08);
 	position: fixed;
 	left: 0;
 	opacity: 0;
@@ -31,5 +32,9 @@ body.-dark {
 
 	&.-visible {
 		opacity: 1;
+	}
+
+	& .title {
+		color: var( --brand-secondary );
 	}
 }
