--- a/themes/experience-engine/assets/styles/components/breaking-news.css
+++ b/themes/experience-engine/assets/styles/components/breaking-news.css
@@ -24,14 +24,13 @@ body.-dark {
 	box-shadow: 1px 0 3px rgba(0, 0, 0, 0.08);
 	position: fixed;
 	left: 0;
-	opacity: 0;
-	transition: opacity 1s;
-	top: 0;
+	transition: top 1s;
+	top: -100px;
 	width: 100%;
 	z-index: 10;
 
 	&.-visible {
-		opacity: 1;
+		top: 0;
 	}
 
 	& .title {
