--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -446,13 +446,16 @@
 
 
 .status {
+	margin: 0 1rem;
+
 	& button {
 		background: transparent;
 		border: 2px solid var(--brand-primary);
 		border-radius: 50%;
+		margin: 0;
 		padding: 0;
 
-		@media(--min-medium-viewport) {
+		@media(--min-xlarge-viewport) {
 			margin: 0 2rem;
 		}
 	}
