--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -151,6 +151,7 @@
 		& .site-menu-toggle {
 			& svg {
 				transform: rotate(45deg);
+
 				& path {
 					&:first-of-type {
 						stroke-dashoffset: -98px;
@@ -171,7 +172,7 @@
 	margin-right: 10px;
 	position: absolute;
 	text-decoration: none;
-	z-index: 10;
+	z-index: 100;
 
 	@media (--min-large-viewport) {
 		display: none;
@@ -190,6 +191,7 @@
 
 	& svg {
 		transition: transform 400ms;
+		pointer-events: none;
 
 		& path {
 			fill: none;
