--- a/themes/experience-engine/assets/styles/components/discover/discover-modal.css
+++ b/themes/experience-engine/assets/styles/components/discover/discover-modal.css
@@ -2,7 +2,7 @@
 	background-color: var(--global-white);
 	height: 100%;
 	left: 0;
-	margin-top: -13.533rem;
+	margin-top: -3.333rem;
 	min-height: calc(100vh - 3.333rem);
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
@@ -179,5 +179,9 @@
 				opacity: 1;
 			}
 		}
+	}
+
+	& .-added .post-thumbnail button {
+		opacity: 1;
 	}
 }
