--- a/themes/experience-engine/assets/styles/base/container.css
+++ b/themes/experience-engine/assets/styles/base/container.css
@@ -29,6 +29,14 @@ html {
 	display: flex;
 	flex-direction: column;
 	position: relative;
+
+	@nest .single & {
+		&.discover-modal-open {
+			& .post {
+				display: none;
+			}
+		}
+	}
 }
 
 .content-wrap {
