--- a/themes/experience-engine/assets/styles/components/lazyload.css
+++ b/themes/experience-engine/assets/styles/components/lazyload.css
@@ -5,11 +5,12 @@
 	position: relative;
 
 	& .loading {
-		left: 50%;
-		min-height: 2rem;
-		margin-top: -1rem;
+		background: var( --global-mercury );
 		position: absolute;
-		top: 50%;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		top: 0;
 
 		&::after {
 			height: 1.6rem;
