--- a/themes/experience-engine/assets/styles/components/player/range-slider-cb.css
+++ b/themes/experience-engine/assets/styles/components/player/range-slider-cb.css
@@ -1,6 +1,7 @@
 .new-test-range-input {
 	background: transparent;
-	display: none;
+	height: 7px;
+	margin-top: -6px;
 
 	@media all and (-ms-high-contrast:none) {
 		display: block;
@@ -11,13 +12,14 @@
 		appearance: none;
 		border: 1px solid white;
 		cursor: pointer;
+		height: 16px;
 		width: 82px;
 	}
 
 	& input[type=range]::-webkit-slider-runnable-track {
 		width: 82px;
 		height: 2px;
-		background: var(--brand-primary);
+		background: #ddd;
 		border: none;
 		border-radius: 3px;
 	}
@@ -37,14 +39,14 @@
 	}
 
 	& input[type=range]:focus::-webkit-slider-runnable-track {
-		background: var(--brand-primary);
+		background: #ddd;
 	}
 
 	/* FireFox */
 	& input[type=range]::-moz-range-track {
 		width: 82px;
 		height: 2px;
-		background: var(--brand-primary);
+		background: blue;
 		border: none;
 		border-radius: 3px;
 	}
