--- a/themes/experience-engine/assets/styles/components/player/range-slider-cb.css
+++ b/themes/experience-engine/assets/styles/components/player/range-slider-cb.css
@@ -10,6 +10,7 @@
 	/* Safari, Chrome */
 	& input[type=range]{
 		appearance: none;
+		background: transparent;
 		border: 1px solid white;
 		cursor: pointer;
 		height: 16px;
