--- a/themes/experience-engine/assets/styles/components/player/range-slider-cb.css
+++ b/themes/experience-engine/assets/styles/components/player/range-slider-cb.css
@@ -11,7 +11,6 @@
 	& input[type=range]{
 		appearance: none;
 		background: transparent;
-		border: 1px solid white;
 		cursor: pointer;
 		height: 16px;
 		width: 82px;
@@ -31,7 +30,7 @@
 		height: 10px;
 		width: 10px;
 		border-radius: 50%;
-		background: var(--brand-primary);
+		background: var(--brand-button-color);
 		margin-top: -4px;
 	}
 
@@ -56,7 +55,7 @@
 		height: 10px;
 		width: 10px;
 		border-radius: 50%;
-		background: var(--brand-primary);
+		background: var(--brand-button-color);
 	}
 
 	/*hide the outline behind the border*/
@@ -100,15 +99,18 @@
 		height: 10px;
 		width: 10px;
 		border-radius: 50%;
-		background: var(--brand-primary);
+		background: var(--brand-button-color);
 	}
 
 	& input[type=range]:focus::-ms-fill-lower {
-		background: var(--brand-primary);
+		background: var(--brand-button-color);
 	}
 
 	& input[type=range]:focus::-ms-fill-upper {
 		background: #ccc;
 	}
 
+	& + .pre-bar {
+		background: var( --brand-button-color );
+	}
 }
