--- a/themes/experience-engine/assets/styles/components/discover/discover-modal.css
+++ b/themes/experience-engine/assets/styles/components/discover/discover-modal.css
@@ -6,7 +6,7 @@
 	min-height: calc(100vh - 3.333rem);
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
-	position: relative;
+	position: absolute;
 	top: 0;
 	width: 100%;
 	z-index: 5;
