Add a background to the logo

--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -140,6 +140,7 @@
 		}
 
 		& .logo {
+			background: var(--global-theme-secondary);
 			display: flex;
 			justify-content: center;
 			margin: 0;
