--- a/themes/experience-engine/assets/styles/components/front-page.css
+++ b/themes/experience-engine/assets/styles/components/front-page.css
@@ -42,6 +42,11 @@
 
 	& .countdown-content {
 		display: flex;
+		flex-direction: column;
+
+		@media (--min-medium-viewport) {
+			flex-direction: row;
+		}
 	}
 
 	& .countdown-wrapper,
@@ -58,12 +63,17 @@
 	& .countdown-timer {
 		display: flex;
 		justify-content: center;
+		margin-bottom: 2rem;
+
+		@media (--min-medium-viewport) {
+			margin-bottom: 0;
+		}
 
 		& .time {
 			background-color: var(--brand-primary);
 			color: var(--global-white);
 			display: block;
-			font-size: 3rem;
+			font-size: 2.5rem;
 			font-family: monospace;
 			font-weight: 700;
 			padding: .25rem 0;
