--- a/themes/experience-engine/assets/styles/components/front-page.css
+++ b/themes/experience-engine/assets/styles/components/front-page.css
@@ -83,9 +83,8 @@
 		}
 
 		& .time {
-			background-color: var(--brand-primary);
 			color: var(--global-white);
-			display: block;
+			display: flex;
 			font-size: 2.5rem;
 			font-family: monospace;
 			font-weight: 700;
@@ -93,22 +92,77 @@
 
 			&::after {
 				content: ":";
-				margin: 0 .25rem;
+				margin: 0;
 			}
 
-			&:first-child {
-				border-radius: 5px 0 0 5px;
-				padding-left: .5rem;
+			&:last-child::after {
+				content: none;
 			}
 
-			&:last-child {
-				border-radius: 0 5px 5px 0;
-				padding-right: .5rem;
+			& .tick {
+				display: block;
+				height: 100%;
+				margin: 0 2px;
+				position: relative;
+				width: 32px;
+			}
 
-				&::after {
-					content: "";
-					margin: 0;
+			& .tick > div {
+				position: absolute;
+				height: 50%;
+				left: 0;
+				overflow: hidden;
+				width: 100%;
+				z-index: 5;
+
+				&.up {
+					transform-origin: 50% 100%;
+					top: 0;
+
+					&:after {
+						content: "";
+						position: absolute;
+						top: 27px;
+						left: 0;
+						z-index: 5;
+						width: 100%;
+						height: 3px;
+						background-color: rgba(0,0,0,.4);
+					}
+
+					& .inn {
+						top: 0;
+					}
 				}
+
+				&.down {
+					transform-origin: 50% 0%;
+					bottom: 0;
+
+					& .inn {
+						bottom: 0;
+					}
+				}
+			}
+
+			& div .shadow {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				z-index: 6;
+			}
+
+			& div .inn {
+				position: absolute;
+				left: 0;
+				z-index: 1;
+				width: 100%;
+				height: 200%;
+				color: #ccc;
+				text-shadow: 0 1px 2px #000;
+				text-align: center;
+				background-color: #333;
+				border-radius: 6px;
 			}
 		}
 	}
