--- a/themes/experience-engine/assets/styles/components/front-page.css
+++ b/themes/experience-engine/assets/styles/components/front-page.css
@@ -14,6 +14,12 @@
 		padding: 2.222rem 1rem;
 	}
 
+	& .countdown {
+		padding-top: 13px;
+		padding-bottom: 14px;
+		max-width: 970px;
+	}
+
 	& .placeholder-cta,
 	& .placeholder-countdown {
 		padding-bottom: 2.222rem;
@@ -65,11 +71,14 @@
 	}
 
 	& .countdown-labels {
-		margin-bottom: .25rem;
+		display: flex;
+		margin: auto auto .25rem;
+		width: 385px;
 
-		& span {
+		& div {
 			font-size: .875rem;
 			margin: 0 1rem;
+			justify-content: center;
 		}
 	}
 
