Fix mobile IE11

--- a/themes/experience-engine/assets/styles/components/front-page.css
+++ b/themes/experience-engine/assets/styles/components/front-page.css
@@ -51,10 +51,10 @@
 	}
 
 	& .countdown-content {
-		display: flex;
-		flex-direction: column;
+		display: block;
 
 		@media (--min-medium-viewport) {
+			display: flex;
 			flex-direction: row;
 		}
 	}
