Reduce width of labels

--- a/themes/experience-engine/assets/styles/components/front-page.css
+++ b/themes/experience-engine/assets/styles/components/front-page.css
@@ -73,8 +73,12 @@
 	& .countdown-labels {
 		display: flex;
 		margin: auto auto .25rem;
-		max-width: 385px;
+		max-width: 325px;
 		width: 100%;
+
+		@media (--min-medium-viewport) {
+			max-width: 385px;
+		}
 
 		& div {
 			font-size: .875rem;
